--- a/app/src/main/res/layout/fragment_bookcity.xml
+++ b/app/src/main/res/layout/fragment_bookcity.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bookcity_swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/bookcity_banner"
-            layout="@layout/include_banner"
-            android:visibility="gone" />
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/bookcity_recyclerview"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookcity_banner" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <include
             layout="@layout/view_empty"
             android:visibility="gone" />
-    </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
